Rename Peplepay to Platrlat in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Peplepay - Data, Airtime, Bills, Payout & Cards</title>
+  <title>Platrlat - Data, Airtime, Bills, Payout & Cards</title>
 
   <!-- SEO Optimization -->
   <meta name="description" content="Peplepay helps you buy Data, Airtime, pay Bills, manage Payouts and Cards all in one simple, secure platform. Fast, affordable, and reliable.">
@@ -65,18 +65,18 @@
         <div class="hero-content" style="text-align: left;">
             
             <h1 class="hero-name">
-                <span class="name-part">Simplify your payments and top-ups with Peplepay!</span>
+                <span class="name-part">Simplify your payments and top-ups with Platrlat!</span>
             </h1>
             <p class="hero-description">
-                Simplify your finances with Peplepay. Enjoy hassle-free airtime, data bundles, and utility bill payments—all through one secure platform.
+                Simplify your finances with Platrlat. Enjoy hassle-free airtime, data bundles, and utility bill payments—all through one secure platform.
             </p>
             <div class="hero-buttons" style="text-align: left;">
-                <a href="register.php" class="btn btn-primary">Register!</a>
-                <a href="login.php" class="btn btn-secondary">Login</a>                    
+                <a href="/app/create-account" class="btn btn-primary">Register!</a>
+                <a href="/app" class="btn btn-secondary">Login</a>                    
             </div>
         </div>
         <div class="hero-visual">
-            <img src="banner.png" alt="Peplepay Hero Image" class="hero-image">
+            <img src="banner.png" alt="Hero Image" class="hero-image">
         </div>
     </div>
     </section>
@@ -90,9 +90,9 @@
             <div class="about-main-content">
                 <div class="about-text">
                     <div class="about-intro">
-                        <h3>Peplepay – Data, Airtime, Bills</h3>
+                        <h3>Platrlat – Data, Airtime, Bills</h3>
                         <p>
-                            Simplify your payments with Peplepay. Instantly recharge airtime, buy data bundles, and pay utility bills — all through one secure and easy-to-use platform. Fast, reliable, and designed for your convenience.
+                            Simplify your payments with Platrlat. Instantly recharge airtime, buy data bundles, and pay utility bills — all through one secure and easy-to-use platform. Fast, reliable, and designed for your convenience.
                         </p>
                     </div>
                 </div>
@@ -179,14 +179,14 @@
             <div class="about-main-content">
                 <div class="about-text">
                     <div class="about-intro">
-                        <h3>About Peplepay</h3>
-                        <p>Peplepay is a modern digital payments company built using the Pulsepoint NG platform. We are under <strong>PointNG Digital Service BN37473</strong> and committed to providing fast, secure, and reliable solutions for your everyday payments.</p>
-                        <p>With Peplepay, you can easily recharge data and airtime, pay bills, manage payouts, and use virtual cards—all from one seamless platform. Our mission is to simplify digital transactions in Nigeria and beyond.</p>
+                        <h3>About Platrlat</h3>
+                        <p>Platrlat is a modern digital payments company built using the Pulsepoint NG platform. We are under <strong>PointNG Digital Service BN37473</strong> and committed to providing fast, secure, and reliable solutions for your everyday payments.</p>
+                        <p>With Platrlat, you can easily recharge data and airtime, pay bills, manage payouts, and use virtual cards—all from one seamless platform. Our mission is to simplify digital transactions in Nigeria and beyond.</p>
                     </div>
                 </div>
             </div>
             <div class="about-image-offer">
-                <h4>Peplepay – Data, Airtime, Bills</h4>
+                <h4>Platrlat – Data, Airtime, Bills</h4>
                 <img src="assets/images/peplepay_about.png" alt="About Peplepay" />
             </div>
         </div>
@@ -205,7 +205,7 @@
                 <!-- Review 1 -->
                 <div class="review-item">
                     <div class="review-content">
-                        <p>"Buying data on Peplepay is very easy and fast. My connection works perfectly every time!"</p>
+                        <p>"Buying data on Platrlat is very easy and fast. My connection works perfectly every time!"</p>
                         <div class="review-author">
                             <span class="author-name">Oluwatosin .A</span>
                             <div class="review-rating">
@@ -222,7 +222,7 @@
                 <!-- Review 2 -->
                 <div class="review-item">
                     <div class="review-content">
-                        <p>"Airtime recharge on Peplepay is fast and reliable. Highly recommended!"</p>
+                        <p>"Airtime recharge on Platrlat is fast and reliable. Highly recommended!"</p>
                         <div class="review-author">
                             <span class="author-name">Favour .A</span>
                             <div class="review-rating">
@@ -239,7 +239,7 @@
                 <!-- Review 3 -->
                 <div class="review-item">
                     <div class="review-content">
-                        <p>"Paying bills through Peplepay is seamless and very convenient."</p>
+                        <p>"Paying bills through Platrlat is seamless and very convenient."</p>
                         <div class="review-author">
                             <span class="author-name">Nelson .C</span>
                             <div class="review-rating">
@@ -256,7 +256,7 @@
                 <!-- Review 4 -->
                 <div class="review-item">
                     <div class="review-content">
-                        <p>"Sending money and payouts via Peplepay is instant and secure."</p>
+                        <p>"Sending money and payouts via Platrlat is instant and secure."</p>
                         <div class="review-author">
                             <span class="author-name">Chukwuka David</span>
                             <div class="review-rating">
@@ -273,7 +273,7 @@
                 <!-- Review 5 -->
                 <div class="review-item">
                     <div class="review-content">
-                        <p>"Virtual cards on Peplepay make online payments secure and hassle-free!"</p>
+                        <p>"Virtual cards on Platrlat make online payments secure and hassle-free!"</p>
                         <div class="review-author">
                             <span class="author-name">Abayomi Winner</span>
                             <div class="review-rating">
@@ -290,7 +290,7 @@
                 <!-- Review 6 -->
                 <div class="review-item">
                     <div class="review-content">
-                        <p>"Peplepay makes all my digital payments easy and fast. Great platform!"</p>
+                        <p>"Platrlat makes all my digital payments easy and fast. Great platform!"</p>
                         <div class="review-author">
                             <span class="author-name">Team Suggestion</span>
                             <div class="review-rating">
@@ -318,10 +318,10 @@
             <section id="contact" class="contact-section">
   <div class="container">
     <div class="contact-info" style="text-align: left;">
-      <h3>Ready to get started with Peplepay?</h3>
+      <h3>Ready to get started with Platrlat?</h3>
       <p>
         We’re excited to help you buy data, recharge airtime, pay bills, send payouts, and use secure cards. 
-        Let’s discuss how Peplepay can power your digital payments.
+        Let’s discuss how Platrlat can power your digital payments.
       </p>
       <div class="contact-methods" style="display: flex; flex-direction: column; align-items: flex-start; gap: 15px; text-align: left;">
 
@@ -330,7 +330,7 @@
     <div class="method-icon"><i class="fa-regular fa-envelope"></i></div>
     <div class="method-info">
       <span class="method-label">Email</span><br>
-      <a href="mailto:peplepayng@gmail.com" class="method-value">peplepayng@gmail.com</a>
+      <a href="mailto:help@platr.lat" class="method-value">help@platr.lat</a>
     </div>
   </div>
 
@@ -369,7 +369,7 @@
           <img src="assets/images/peplepay-logo-white.png" alt="Peplepay Logo" style="max-width: 150px;">
         </a>
         <p>
-          Peplepay is your one-stop app for data, airtime, bills, payouts, and secure cards. 
+          Platrlat is your one-stop app for data, airtime, bills, payouts, and secure cards. 
           Fast, reliable, and built for everyone in Nigeria and beyond.
         </p>
       </div>
@@ -390,7 +390,7 @@
 
     <!-- Bottom -->
     <div class="footer-bottom" style="margin-top: 20px;">
-      <p>&copy; 2025 Peplepay App. All rights reserved.</p>
+      <p>&copy; 2025 Platrlat Technologies. All rights reserved.</p>
     </div>
   </div>
 </footer>
