Update image source paths in index.html

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <!-- Data Plans -->
             <div class="portfolio-item" data-category="data">
                 <div class="portfolio-image">
-                    <img src="assets/images/data.png" alt="Affordable Data Plans">
+                    <img src="/img/data.png" alt="Affordable Data Plans">
                 </div>
                 <div class="portfolio-content" style="text-align: left;">
                     <h3>Data</h3>
@@ -126,7 +126,7 @@
             <!-- Airtime -->
             <div class="portfolio-item" data-category="airtime">
                 <div class="portfolio-image">
-                    <img src="assets/images/airtime.png" alt="Airtime Recharge">
+                    <img src="/img/airtime.png" alt="Airtime Recharge">
                 </div>
                 <div class="portfolio-content" style="text-align: left;">
                     <h3>Airtime</h3>
@@ -137,7 +137,7 @@
             <!-- Bills Payment -->
             <div class="portfolio-item" data-category="bills">
                 <div class="portfolio-image">
-                    <img src="assets/images/bills.png" alt="Bills Payment">
+                    <img src="/img/bills.png" alt="Bills Payment">
                 </div>
                 <div class="portfolio-content" style="text-align: left;">
                     <h3>Bills</h3>
