Change color of 'Forgot password?' text

--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
     <input type="password" id="password" placeholder="********">
   </div>
 
-  <div class="forgot-pass" onclick="window.location.href='forget-password'" style="color:#01009C; font-size:13px; cursor:pointer;">Forgot password?</div>
+  <div class="forgot-pass" onclick="window.location.href='forget-password'" style="color:#0069ff; font-size:13px; cursor:pointer;">Forgot password?</div>
   <br>
 
   <button class="btn btn-signin" id="signinBtn" onclick="loginUser()">Sign in</button>
