Change commission text color from red to blue

--- a/app/dashboard/index.html
+++ b/app/dashboard/index.html
@@ -47,7 +47,7 @@
         <div>                  
           <p class="text-xs text-gray-500">Total Balance</p>                  
           <p class="text-2xl font-bold" id="userBalance">NGN 0.00</p>                  
-          <p class="text-xs text-red-500" id="userCommission">+NGN0.00 commission</p>                  
+          <p class="text-xs text-blue-500" id="userCommission">+NGN0.00 commission</p>                  
         </div>                  
         <div class="flex items-center space-x-3">                  
           <i id="toggleBalance" data-lucide="eye-off" class="w-5 h-5 text-gray-500 cursor-pointer"></i>                  
