Update links to remove .html extensions

--- a/app/dashboard/index.html
+++ b/app/dashboard/index.html
@@ -30,10 +30,10 @@
           </div>                  
         </div>                  
         <div class="flex space-x-3">                  
-          <div class="bg-white/20 p-2 rounded-full cursor-pointer" onclick="window.location.href='activity/support.html'">
+          <div class="bg-white/20 p-2 rounded-full cursor-pointer" onclick="window.location.href='activity'">
             <i data-lucide="message-circle" class="w-5 h-5"></i>
           </div>                  
-          <div class="bg-white/20 p-2 rounded-full cursor-pointer" onclick="window.location.href='notifications.html'">
+          <div class="bg-white/20 p-2 rounded-full cursor-pointer" onclick="window.location.href='notifications'">
             <i data-lucide="bell" class="w-5 h-5"></i>
           </div>                  
           </br>                  
@@ -51,26 +51,26 @@
         </div>                  
         <div class="flex items-center space-x-3">                  
           <i id="toggleBalance" data-lucide="eye-off" class="w-5 h-5 text-gray-500 cursor-pointer"></i>                  
-          <button onclick="window.location.href='fund.html'" class="bg-[#0069ff] text-[#FFFFFF] px-4 py-2 rounded-lg text-sm flex items-center space-x-1">                  
+          <button onclick="window.location.href='fund'" class="bg-[#0069ff] text-[#FFFFFF] px-4 py-2 rounded-lg text-sm flex items-center space-x-1">                  
             <i data-lucide="plus" class="w-4 h-4"></i>                  
             <span>Fund</span>                  
           </button>                  
         </div>     
       </div>                  
       <div class="grid grid-cols-4 gap-2 mt-4 text-center">                    
-        <div class="flex flex-col items-center cursor-pointer" onclick="window.location.href='bank.html'">                    
+        <div class="flex flex-col items-center cursor-pointer" onclick="window.location.href='transfer'">                    
           <i data-lucide="send" class="w-6 h-6 text-[#0069ff]"></i>                    
           <span class="text-xs">Transfer</span>                    
         </div>                      
-        <div class="flex flex-col items-center cursor-pointer" onclick="window.location.href='airtime.html'">                    
+        <div class="flex flex-col items-center cursor-pointer" onclick="window.location.href='airtime'">                    
           <i data-lucide="phone" class="w-6 h-6 text-[#0069ff]"></i>                    
           <span class="text-xs">Airtime</span>                    
         </div>                      
-        <div class="flex flex-col items-center cursor-pointer" onclick="window.location.href='data.html'">                    
+        <div class="flex flex-col items-center cursor-pointer" onclick="window.location.href='data'">                    
           <i data-lucide="wifi" class="w-6 h-6 text-[#0069ff]"></i>                    
           <span class="text-xs">Data</span>                    
         </div>                      
-        <div class="flex flex-col items-center cursor-pointer" onclick="window.location.href='more-bills.html'">                    
+        <div class="flex flex-col items-center cursor-pointer" onclick="window.location.href='more-bills'">                    
           <i data-lucide="more-horizontal" class="w-6 h-6 text-[#0069ff]"></i>                    
           <span class="text-xs">More Bills</span>                    
         </div>                    
@@ -101,19 +101,19 @@
           </a>  
         </li>                  
         <li class="flex flex-col items-center">  
-          <a href="more-bills.html" class="flex flex-col items-center">  
+          <a href="more-bills" class="flex flex-col items-center">  
             <i data-lucide="store" class="icon text-gray-400"></i>                  
             <span class="text-xs mt-1 text-gray-400">Services</span>  
           </a>  
         </li>                  
         <li class="flex flex-col items-center">  
-          <a href="transactions.html" class="flex flex-col items-center">  
+          <a href="transactions" class="flex flex-col items-center">  
             <i data-lucide="clock" class="icon text-gray-400"></i>                  
             <span class="text-xs mt-1 text-gray-400">History</span>  
           </a>  
         </li>                  
         <li class="flex flex-col items-center">  
-          <a href="profile.html" class="flex flex-col items-center">  
+          <a href="profile" class="flex flex-col items-center">  
             <i data-lucide="user" class="icon text-gray-400"></i>                  
             <span class="text-xs mt-1 text-gray-400">Profile</span>  
           </a>  
