Enhance SEO metadata and update page title
Updated SEO metadata and canonical link for improved search visibility. Changed title and added structured data for better representation.

--- a/index.html
+++ b/index.html
@@ -3,28 +3,76 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Platrlat - Data, Airtime, Bills, Payout & Cards</title>
+  <title>Platrlat - Data, Airtime, Bills, Payout & Virtual Cards in Nigeria</title>
 
-  <!-- SEO Optimization -->
-  <meta name="description" content="Peplepay helps you buy Data, Airtime, pay Bills, manage Payouts and Cards all in one simple, secure platform. Fast, affordable, and reliable.">
-  <meta name="keywords" content="Peplepay, Data, Airtime, Bills, Payout, Cards, Nigeria, VTU, API, Peplepay NG, Peplepay App">
-  <meta name="author" content="Peplepay NG">
-  <meta property="og:title" content="Peplepay - Data, Airtime, Bills, Payout & Cards">
-  <meta property="og:description" content="All your payments in one place — Data, Airtime, Bills, Payouts, and Cards made easy with Peplepay.">
-  <meta property="og:image" content="favicon.png">
-  <meta property="og:url" content="https://peplepay.vercel.app">
+  <!-- Primary SEO Meta -->
+  <meta name="description" content="Platrlat (platr.lat) helps you buy Data, Airtime, pay Bills, send Payouts, and manage Virtual Cards — fast, secure, and built for Nigeria. API access available for developers.">
+  <meta name="keywords" content="Platrlat, Platr, platr.lat, Data, Airtime, Bills, Electricity, Internet, Cable TV, Payout, Virtual Cards, Dollar Card, API, Nigeria, VTU, Developer API, Fintech, Payments">
+  <meta name="author" content="Platrlat NG">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="en">
+  <meta name="revisit-after" content="3 days">
+
+  <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Platrlat - Data, Airtime, Bills, Payout & Virtual Cards">
+  <meta property="og:description" content="Your all-in-one payment platform for Data, Airtime, Bills, and Virtual Cards — secure, fast, and made for Nigeria. Visit platr.lat today.">
+  <meta property="og:image" content="https://platr.lat/assets/seo-banner.png">
+  <meta property="og:image:alt" content="Platrlat - Data, Airtime, Bills & Cards Platform">
+  <meta property="og:url" content="https://platr.lat">
+  <meta property="og:site_name" content="Platrlat">
+
+  <!-- Twitter Meta -->
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Platrlat - Data, Airtime, Bills, Payout & Cards">
+  <meta name="twitter:description" content="Fast, secure payments for Data, Airtime, Bills, and Virtual Cards. Join thousands of users on Platrlat (platr.lat).">
+  <meta name="twitter:image" content="https://platr.lat/assets/seo-banner.png">
+  <meta name="twitter:site" content="@platrdotlat">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://platr.lat">
+
+  <!-- Structured Data for Google (JSON-LD Schema) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Platrlat",
+    "url": "https://platr.lat",
+    "logo": "https://platr.lat/assets/logo.png",
+    "sameAs": [
+      "https://x.com/platrdotlat",
+      "https://facebook.com/platrdotlat",
+      "https://instagram.com/platrdotlat",
+      "https://t.me/platrdotlat"
+    ],
+    "description": "Platrlat is Nigeria’s smart payment platform for Data, Airtime, Bills, Payouts, and Virtual Cards with developer-friendly API access.",
+    "founder": "Platrlat Technologies",
+    "foundingDate": "2025",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "contactType": "Support",
+      "email": "help@platr.lat",
+      "availableLanguage": "English"
+    }
+  }
+  </script>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" href="https://platr.lat/favicon.png">
 
   <!-- Fonts and Styles -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:wght@300;400;500;600;700&display=block" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="landing.css">
+
+  <!-- Performance -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="theme-color" content="#0283f8">
+  <link rel="dns-prefetch" href="https://platr.lat">
 </head>
 
 <body>
