Update logo URL in index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     "@type": "Organization",
     "name": "Platrlat",
     "url": "https://platr.lat",
-    "logo": "https://platr.lat/assets/logo.png",
+    "logo": "https://platr.lat/img/logo.png",
     "sameAs": [
       "https://x.com/platrdotlat",
       "https://facebook.com/platrdotlat",
@@ -80,7 +80,7 @@
     <div class="nav-container">
       <!-- Logo aligned left -->
       <a href="#home" class="nav-logo">
-        <img src="16e5618a-4bae-426d-9f0c-44da386394b3_removalai_preview.png" alt="Peplepay Logo">
+        <img src="https://platr.lat/img/logo.png" alt="Logo">
       </a>
 
       <!-- Menu -->
