Update image source for Peplepay Services

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </div>
             </div>
             <div class="about-image-offer">
-                <img src="assets/images/peplepay_banner.png" alt="Peplepay Services" />
+                <img src="/images/sponsors.0c816395.png" alt="Peplepay Services" />
             </div>
         </div>
     </div>
