--- a/404.html
+++ b/404.html
@@ -1,17 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page Not Found</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>404 - Page Not Found</title>
+
+<!-- FontAwesome & Toastify -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script src="https://unpkg.com/lucide@latest"></script>
+
+<style>
+  body {
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
+    background: #fff;
+    color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
+
+  .container {
+    max-width: 400px;
+    text-align: center;
+    padding: 20px;
+  }
+
+  h1 {
+    font-size: 70px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #0069ff;
+  }
+
+  h2 {
+    font-size: 22px;
+    margin-bottom: 15px;
+    color: #333;
+  }
+
+  p {
+    font-size: 15px;
+    margin-bottom: 25px;
+    color: #555;
+  }
+
+  .btn {
+    padding: 14px;
+    font-size: 16px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    box-sizing: border-box;
+    width: 100%;
+    margin-bottom: 10px;
+    transition: 0.3s;
+  }
+
+  .btn-home {
+    background: #0069ff;
+    color: #fff;
+    font-weight: bold;
+  }
+
+  .btn-contact {
+    background: #eee;
+    color: #000;
+    border: 1px solid #ccc;
+  }
+
+  .logo {
+    font-weight: bold;
+    font-size: 20px;
+    color: #0069ff;
+    margin-bottom: 20px;
+  }
+
+  .icon-404 {
+    color: #0069ff;
+    margin-bottom: 15px;
+  }
+</style>
+
+<!-- ✅ Optional redirect back to home after 10s -->
+<!-- <meta http-equiv="refresh" content="10; url=/" /> -->
 </head>
+
 <body>
-  <script src="index.js"></script>
-  <div class="not-found">
-    <h1>404 😢</h1>
-    <p>The page you’re looking for doesn’t exist.</p>
-    <a href="/">Go back home</a>
+  <div class="container">
+    <div class="logo">PLATRlat</div>
+    <i data-lucide="alert-triangle" class="icon-404" width="64" height="64"></i>
+    <h1>404</h1>
+    <h2>Page Not Found</h2>
+    <p>Sorry, the page you're looking for doesn’t exist or has been moved.</p>
+
+    <button class="btn btn-home" onclick="window.location.href='/'">Go Home</button>
+    <button class="btn btn-contact" onclick="window.location.href='support-page'">Contact Support</button>
   </div>
+
+<script>
+if (window.lucide) lucide.createIcons();
+
+// ✅ Toastify function
+function showToast(message, type = "info") {
+  let bgColor = "#333";
+  let icon = "info";
+  if (type === "success") { bgColor = "#16a34a"; icon = "check-circle"; }
+  if (type === "error") { bgColor = "#dc2626"; icon = "alert-circle"; }
+  if (type === "info") { bgColor = "#2563eb"; icon = "info"; }
+
+  const el = document.createElement("div");
+  el.className = "flex items-center space-x-2 text-white";
+  el.innerHTML = `<i data-lucide="${icon}" class="w-4 h-4"></i><span>${message}</span>`;
+  if (window.lucide) lucide.createIcons({ icons: [icon] });
+
+  Toastify({
+    node: el,
+    duration: 3000,
+    gravity: "top",
+    position: "center",
+    style: {
+      background: bgColor,
+      borderRadius: "10px",
+      boxShadow: "0 2px 10px rgba(0,0,0,0.15)",
+      padding: "10px 16px"
+    }
+  }).showToast();
+}
+
+// ✅ Show a toast message when arriving at 404 page
+document.addEventListener("DOMContentLoaded", () => {
+  showToast("Page not found. Redirect to home?", "info");
+});
+
+// ✅ Disable inspect / copy
+document.addEventListener('contextmenu', e => e.preventDefault());
+['copy','cut','paste','selectstart'].forEach(evt => document.addEventListener(evt, e => e.preventDefault()));
+document.addEventListener('keydown', e => {
+  if (e.ctrlKey && ['u','s','a'].includes(e.key.toLowerCase())) e.preventDefault();
+});
+</script>
 </body>
 </html>
