Update signup link to redirect to the app root

--- a/app/create-account/index.html
+++ b/app/create-account/index.html
@@ -112,7 +112,7 @@
     <button class="btn btn-create" id="createBtn" onclick="registerUser()">Create Account</button>
     <button class="btn btn-contact" onclick="window.location.href='support-page'">Contact us</button>
 
-    <div class="signup-text" onclick="window.location.href='index.html'">
+    <div class="signup-text" onclick="window.location.href='/app'">
       Already have an account? <span style="color:#0069ff;font-weight:500;">Sign in</span>
     </div>
   </div>
